welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: not found: value len
  moy=moy/len(nums)
          ^